# metabolic-ninja

./: .dockerignore  .travis.yml  Dockerfile  LATEST_BASE_TAG  Makefile  README.md  dev-requirements.in  docker-compose.yml  gunicorn.py  requirements.in  setup.cfg
data/: products.json
deployment/: deployment.yml  ingress.yml  persistentvolume.yml  service.yml
deployment/production/: deployment.yml  ingress.yml  persistentvolume.yml  service.yml
deployment/staging/: deployment.yml  ingress.yml  service.yml
migrations/versions/: 03ed52ee71eb_create_the_design_job_table.py  23dd297ddbb5_.py  50797eac2009_.py  6519ae509e6d_.py  7142dbafe154_.py  a83d6985270b_add_organism_id.py  d4b4218a21c8_.py  edd63b1ec9e3_.py
requirements/: requirements.in  requirements.txt
scripts/: deploy.sh  verify_license_headers.sh  wait_for_postgres.sh
src/disk_usage/: main.py
src/metabolic_ninja/: __init__.py  app.py  celery.py  evaluate.py  healthz.py  helpers.py  jwt.py  models.py  products.py  rabbitmq.py  resources.py  schemas.py  settings.py  tasks.py  universal.py  wsgi.py
src/metabolic_ninja/worker/: data.py  decorators.py  designer.py  helpers.py  main.py  tasks.py
src/tools/: dump_products.py
src/worker/: data.py  decorators.py  designer.py  evaluate.py  helpers.py  main.py  models.py  tasks.py
tests/: conftest.py
tests/test_integration/: conftest.py  test_endpoints.py  test_tasks.py
tests/test_unit/: test_app.py  test_helpers.py
