[metadata]
name = metabolic-ninja
url = https://github.com/DD-DeCaF/metabolic-ninja
author = DD-DeCaF Team
author_email = niso@biosustain.dtu.dk
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.6
license = Apache Software License Version 2.0
description = Predict heterologous pathways for the given organism and chemical of interest
long_description = file: README.md
keywords =

[options]
zip_safe = True
python_requires = >=3.6
include_package_data = True
packages = find:

[options.package_data]
metabolic_ninja =

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 80
exclude =
    __init__.py
    docs

[aliases]
test = pytest

[tool:pytest]
testpaths = tests

[pydocstyle]
match_dir = src/metabolic_ninja

[isort]
line_length = 80
indent = 4
multi_line_output = 4
lines_after_imports = 2
