[metadata]
name = metabolic-ninja
url = https://github.com/DD-DeCaF/metabolic-ninja
author = DD-DeCaF Team
author_email = niso@biosustain.dtu.dk
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.6
license = Apache Software License Version 2.0
description = Predict heterologous pathways for the given organism and chemical of interest
long_description = file: README.md
keywords =

[options]
zip_safe = True
python_requires = >=3.6
include_package_data = True
packages = find:

[options.package_data]
metabolic_ninja =

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
ignore =
    D100
    D101
    D102
    D103
    D104
    D105
    D106
    D107
    D202
    E203
    W503
exclude =
    __init__.py

[tool:pytest]
testpaths = tests

[pydocstyle]
match_dir = src/metabolic_ninja

[isort]
skip =
    __init__.py
line_length = 88
indent = 4
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
lines_after_imports = 2
known_first_party = metabolic_ninja
known_third_party =
    cobra
    cameo
